<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>me.ele.idgen</groupId>
	<artifactId>idgen</artifactId>
	<packaging>pom</packaging>
	<version>1.0.5-RELEASE</version>

	<modules>
		<module>idgen-client</module>
		<module>idgen-service</module>
	</modules>


	<properties>
		<project.build.sourceVersion>1.8</project.build.sourceVersion>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<skip_maven_deploy>true</skip_maven_deploy>
		<!-- Common libs -->
		<spring_version>4.0.2.RELEASE</spring_version>
		<javassist_version>3.15.0-GA</javassist_version>
		<netty_version>3.2.5.Final</netty_version>
		<grizzly_version>2.1.4</grizzly_version>
		<httpclient_version>4.5</httpclient_version>
		<hessian_lite_version>3.2.1-fixed-2</hessian_lite_version>
		<xstream_version>1.4.1</xstream_version>
		<fastjson_version>1.2.6</fastjson_version>
		<bsf_version>3.1</bsf_version>
		<sorcerer_version>0.8</sorcerer_version>
		<zookeeper_version>3.4.5</zookeeper_version>
		<zkclient_version>0.1</zkclient_version>

		<curator_version>1.3.3</curator_version>
		<servlet_version>3.1.0</servlet_version>
		<jetty_version>6.1.26</jetty_version>
		<validation_version>1.0.0.GA</validation_version>
		<hibernate_validator_version>4.2.0.Final</hibernate_validator_version>
		<jcache_version>0.4</jcache_version>
		<sca_version>2.0-M5.1</sca_version>
		<guice_version>3.0</guice_version>
		<cglib_version>2.2</cglib_version>
		<!-- Log libs -->
		<slf4j_version>1.7.21</slf4j_version>
		<jcl_version>1.1</jcl_version>
		<log4j_version>1.2.17</log4j_version>
		<logback_version>1.1.7</logback_version>
		<!-- Test libs -->
		<junit_version>4.10</junit_version>
		<easymock_version>3.0</easymock_version>
		<jmockit_version>0.999.8</jmockit_version>
		<jmxtools_version>1.2.1</jmxtools_version>
		<dubbo_version>2.5.3</dubbo_version>
		<!-- Build args -->
		<!--<argline>-server -Xms64m -Xmx64m -XX:PermSize=64m -XX:MaxPermSize=64m</argline> -->
		<updateReleaseInfo>true</updateReleaseInfo>
		<profile.name>oss</profile.name>
	</properties>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>dubbo</artifactId>
				<version>${dubbo_version}</version>
				<exclusions>
					<exclusion>
						<groupId>log4j</groupId>
						<artifactId>log4j</artifactId>
					</exclusion>
					<exclusion>
						<groupId>commons-logging</groupId>
						<artifactId>commons-logging</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>idgen-service</artifactId>
				<version>1.0.4-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>idgen-client</artifactId>
				<version>1.0.5-RELEASE</version>
			</dependency>
			<!-- Common libs -->
			<dependency>
				<groupId>com.sun.jdmk</groupId>
				<artifactId>jmxtools</artifactId>
				<version>${jmxtools_version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context</artifactId>
				<version>${spring_version}</version>
				<exclusions>
					<exclusion>
						<artifactId>commons-logging</artifactId>
						<groupId>commons-logging</groupId>
					</exclusion>
				</exclusions>
			</dependency>

			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-web</artifactId>
				<version>${spring_version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>3.3.2</version>
			</dependency>

			<dependency>
				<groupId>org.javassist</groupId>
				<artifactId>javassist</artifactId>
				<version>${javassist_version}</version>
			</dependency>
			<dependency>
				<groupId>org.jboss.netty</groupId>
				<artifactId>netty</artifactId>
				<version>${netty_version}</version>
			</dependency>
			<dependency>
				<groupId>org.glassfish.grizzly</groupId>
				<artifactId>grizzly-core</artifactId>
				<version>${grizzly_version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpclient</artifactId>
				<version>${httpclient_version}</version>
			</dependency>
			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>hessian-lite</artifactId>
				<version>${hessian_lite_version}</version>
			</dependency>
			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>fastjson</artifactId>
				<version>${fastjson_version}</version>
			</dependency>
			<dependency>
				<groupId>com.thoughtworks.xstream</groupId>
				<artifactId>xstream</artifactId>
				<version>${xstream_version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.bsf</groupId>
				<artifactId>bsf-api</artifactId>
				<version>${bsf_version}</version>
			</dependency>
			<dependency>
				<groupId>org.jvnet.sorcerer</groupId>
				<artifactId>sorcerer-javac</artifactId>
				<version>${sorcerer_version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.zookeeper</groupId>
				<artifactId>zookeeper</artifactId>
				<version>${zookeeper_version}</version>
			</dependency>
			<dependency>
				<groupId>com.github.sgroschupf</groupId>
				<artifactId>zkclient</artifactId>
				<version>${zkclient_version}</version>
			</dependency>
			<dependency>
				<groupId>com.netflix.curator</groupId>
				<artifactId>curator-framework</artifactId>
				<version>${curator_version}</version>
			</dependency>
			<dependency>
				<groupId>com.netflix.curator</groupId>
				<artifactId>curator-recipes</artifactId>
				<version>${curator_version}</version>
			</dependency>
			<dependency>
				<groupId>redis.clients</groupId>
				<artifactId>jedis</artifactId>
				<version>${jedis_version}</version>
			</dependency>
			<dependency>
				<groupId>org.mortbay.jetty</groupId>
				<artifactId>jetty</artifactId>
				<version>${jetty_version}</version>
			</dependency>
			<dependency>
				<groupId>javax.validation</groupId>
				<artifactId>validation-api</artifactId>
				<version>${validation_version}</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-validator</artifactId>
				<version>${hibernate_validator_version}</version>
			</dependency>
			<dependency>
				<groupId>javax.cache</groupId>
				<artifactId>cache-api</artifactId>
				<version>${jcache_version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.tuscany.sca</groupId>
				<artifactId>tuscany-sca-api</artifactId>
				<version>${sca_version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.inject</groupId>
				<artifactId>guice</artifactId>
				<version>${guice_version}</version>
			</dependency>
			<dependency>
				<groupId>com.alibaba.citrus</groupId>
				<artifactId>citrus-webx-all</artifactId>
				<version>${webx_version}</version>
			</dependency>
			<!-- Log libs -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j_version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-log4j12</artifactId>
				<version>${slf4j_version}</version>
			</dependency>
			<dependency>
				<groupId>commons-logging</groupId>
				<artifactId>commons-logging-api</artifactId>
				<version>${jcl_version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>jcl-over-slf4j</artifactId>
				<!-- use this to transfer spring's log to slf4j -->
				<version>${slf4j_version}</version>
			</dependency>

			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>log4j-over-slf4j</artifactId>
				<version>${slf4j_version}</version>
			</dependency>

			<dependency>
				<groupId>log4j</groupId>
				<artifactId>log4j</artifactId>
				<version>${log4j_version}</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>${logback_version}</version>
			</dependency>
			<!-- Test libs -->
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit_version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.easymock</groupId>
				<artifactId>easymock</artifactId>
				<version>${easymock_version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>com.googlecode.jmockit</groupId>
				<artifactId>jmockit</artifactId>
				<version>${jmockit_version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.easymock</groupId>
				<artifactId>easymockclassextension</artifactId>
				<version>${easymock_version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>cglib</groupId>
				<artifactId>cglib-nodep</artifactId>
				<version>${cglib_version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
		</dependency>
		<dependency>
			<groupId>org.easymock</groupId>
			<artifactId>easymock</artifactId>
		</dependency>
		<dependency>
			<groupId>org.easymock</groupId>
			<artifactId>easymockclassextension</artifactId>
		</dependency>
		<dependency>
			<groupId>com.googlecode.jmockit</groupId>
			<artifactId>jmockit</artifactId>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.2</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<compilerArgs>
						<arg>-parameters</arg>
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<distributionManagement>
		<repository>
			<id>ele-ipd-release</id>
			<name>Releases Repository</name>
			<url>http://maven.dev.elenet.me/nexus/content/repositories/ele-ipd-release/</url>
		</repository>
		<snapshotRepository>
			<id>ele-ipd-snapshot</id>
			<name>Snapshots Repository</name>
			<url>http://maven.dev.elenet.me/nexus/content/repositories/ele-ipd-snapshot/</url>
		</snapshotRepository>
	</distributionManagement>
</project>
